# raven

./: .gitignore  README.md  pyproject.toml  setup.py
M17/stars/: M17-B111.txt  M17-B150.txt  M17-B164.txt  M17-B181.txt  M17-B205.txt  M17-B213.txt  M17-B215.txt  M17-B234.txt  M17-B243.txt  M17-B253.txt  M17-B268.txt  M17-B272.txt  M17-B275.txt  M17-B289.txt  M17-B311.txt  M17-B331.txt  M17-B337.txt  M17-B86.txt  M17-B93.txt  M17-CEN55.txt
carina_nebula/stars/: ALS 15204.txt  ALS 15207.txt  ALS 18083.txt  CPD-58 2627.txt  CPD-59 2551.txt  CPD-59 2554.txt  CPD-59 2610.txt  CPD-59 2673.txt  HD 92607.txt  HD 93028.txt  HD 93190.txt  HD 93222.txt  HD 93403.txt  HD 93576.txt  HD 93632.txt  HDE 303308.txt  HDE 303316.txt  HDE 305438.txt  HDE 305518.txt  HDE 305523.txt  HDE 305524.txt  HDE 305525.txt  HDE 305536.txt  HDE 305539.txt  HDE 305612.txt  HDE 305619.txt  [ARV2008] 206.txt
raven/: gibbs.py  plot.py  raven.py  utils.py
trumpler_14/stars/: ALS 15206.txt  HD 93027.txt  HDE 303312.txt  HDE 305532.txt
